@@ -1,8 +1,10 @@
-$Id: ChangeLog,v 1.46 2008/06/25 10:10:15 tho Exp $
+$Id: ChangeLog,v 1.47 2008/07/04 00:36:30 tat Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU x.y.z:
+	- [log] u_log_set_{lock,unlock} added to setup locking callbacks (needed on 
+            multi-threading environments)
 	- [configure] added --no_docs and --do_test configure flags
 	- [array] dynamic array module added (can be disabled via --no_array
 	  configure argument)
